k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: football-app
  labels:
    name: football-app
    app: football-web-app
